[CORE-1468] Addressing SonarQube issues - fixing S6204 (use Stream.toList())
Replaces 6 uses of collect(Collectors.toList()) with the Java 16+ Stream.toList(). Verified none of the six results is mutated after construction, so the immutable list toList() returns is safe: AbstractHeaderBasedEngineProvider:76 flows into a constructor that already does List.copyOf, :132 goes straight into ClaimPath.of, and JaxRs3JwtAuthenticationEngine:79 is consumed read-only by authenticate. Now-unused Collectors imports are removed.